--- a/exer06-seletores/index.html
+++ b/exer06-seletores/index.html
@@ -14,6 +14,7 @@
 
     <nav>
       <a href="#">LOGO</a>
+      <a href="#">Casa</a>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Sobre</a></li>
