--- a/exer06-seletores/index.html
+++ b/exer06-seletores/index.html
@@ -15,11 +15,9 @@
     <nav>
       <a href="#">LOGO</a>
       <a href="#">Casa</a>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
+      <a href="#">Home</a>
+      <a href="#">Sobre</a>
+      <a href="#">Contato</a>
     </nav>
 
     <article class="exemplo1">
